--- a/client/nav.jade
+++ b/client/nav.jade
@@ -33,52 +33,52 @@ template(name='nav')
             .spacer
             i.large.yin.yang.loading.big.icon
             +status    
-        .right.menu
-            // if currentUser
-            //     a.icon.item.add(title='add post') 
-            //         i.plus.large.icon
-            //     if unread_count
-            //         a.item.alerts.select_term(href="#" class=alert_toggle_class)
-            //             i.large.bell.icon
-            //             if unread_count
-            //                 |#{unread_count}
-            //     else
-            //         a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
-            //             i.large.outline.bell.icon
-            //     a.icon.item(href="/chat" title='chat') 
-            //         i.chat.outline.large.icon
-            // // a.icon.item(href="/user/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
-            if is_dev 
-                .icon.item
-                    i.large.code.icon
-            if currentUser
-                // a.large.item.toggle_rightbar(class="{{isActiveRoute 'user_dashboard'}}")
-                a.mobile.hidden.item(href="/user/#{currentUser.username}" class="{{isActiveRoute 'user_credits'}}")
-                    |#{currentUser.points}p
-                a.large.item(href="/user/#{currentUser.username}" class="{{isActiveRoute 'user_dashboard'}}")
-                    //- i.large.user.large.icon
-                    if currentUser.profile_image_id
-                        if is_admin
-                            i.large.shield.icon(title='admin mode on')
-                        else
-                            img.ui.avatar.compact.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                    else 
-                        if is_admin
-                            i.large.shield.icon(title='admin mode on')
-                        else
-                            i.large.user.large.icon
-                    strong.mobile.hidden #{currentUser.name}
-                a.icon.large.item.toggle_rightbar.select_term
-                    i.ellipsis.vertical.large.icon
-            else
-                a.item(href="/register" title='register')
-                    // i.large.plus.icon
-                    |register
-                    // +icon name='plus'
-                a.item(href="/login" title='login')
-                    // i.large.chevron.right.icon
-                    |login
-                    // +icon name='login-rounded-right'
+        // .right.menu
+        //     // if currentUser
+        //     //     a.icon.item.add(title='add post') 
+        //     //         i.plus.large.icon
+        //     //     if unread_count
+        //     //         a.item.alerts.select_term(href="#" class=alert_toggle_class)
+        //     //             i.large.bell.icon
+        //     //             if unread_count
+        //     //                 |#{unread_count}
+        //     //     else
+        //     //         a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
+        //     //             i.large.outline.bell.icon
+        //     //     a.icon.item(href="/chat" title='chat') 
+        //     //         i.chat.outline.large.icon
+        //     // // a.icon.item(href="/user/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
+        //     if is_dev 
+        //         .icon.item
+        //             i.large.code.icon
+        //     if currentUser
+        //         // a.large.item.toggle_rightbar(class="{{isActiveRoute 'user_dashboard'}}")
+        //         a.mobile.hidden.item(href="/user/#{currentUser.username}" class="{{isActiveRoute 'user_credits'}}")
+        //             |#{currentUser.points}p
+        //         a.large.item(href="/user/#{currentUser.username}" class="{{isActiveRoute 'user_dashboard'}}")
+        //             //- i.large.user.large.icon
+        //             if currentUser.profile_image_id
+        //                 if is_admin
+        //                     i.large.shield.icon(title='admin mode on')
+        //                 else
+        //                     img.ui.avatar.compact.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+        //             else 
+        //                 if is_admin
+        //                     i.large.shield.icon(title='admin mode on')
+        //                 else
+        //                     i.large.user.large.icon
+        //             strong.mobile.hidden #{currentUser.name}
+        //         a.icon.large.item.toggle_rightbar.select_term
+        //             i.ellipsis.vertical.large.icon
+        //     else
+        //         a.item(href="/register" title='register')
+        //             // i.large.plus.icon
+        //             |register
+        //             // +icon name='plus'
+        //         a.item(href="/login" title='login')
+        //             // i.large.chevron.right.icon
+        //             |login
+        //             // +icon name='login-rounded-right'
 
 template(name='topbar')
     .ui.fluid.large.attached.segment
