auto run related users on ruser load, rmeove swal, suneditor, cloudinary, nav.coffee, lib methods

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,5 +1,5 @@
 template(name='nav')
-    .ui.fluid.attached.borderless.inverted.menu.topnav
+    .ui.fluid.attached.borderless.inverted.six.item.menu.topnav
         // a.icon.item.toggle_leftbar
         //     i.bars.icon
         // a.icon.zoomer.item(href='/' class="{{isActivePath regex=''}}" title='dao')
