four item nav bar v1 combine reddit and stack

--- a/client/reddit/ruser.jade
+++ b/client/reddit/ruser.jade
@@ -140,7 +140,7 @@ template(name='ruser_top_emotions')
                     
                                 
 template(name='ruser_post')
-    .ui.seg
+    .ui.segment
         if embed
             span.rounded.full
                 |!{embed}
