--- a/client/client.jade
+++ b/client/client.jade
@@ -39,8 +39,8 @@ template(name='layout')
     +nav
     .ui.bottom.attached.pushable.segment
         // +top_sidebar
-        +left_sidebar
-        +right_sidebar
+        // +left_sidebar
+        // +right_sidebar
                 
         #main_area.global_container.pusher
             +yield
