--- a/client/s.css
+++ b/client/s.css
@@ -1,6 +1,6 @@
 body {
   /* font-family: 'Raleway', sans-serif !important; */
-  /*font-family: 'Ubuntu', sans-serif !important; */
+  font-family: 'Ubuntu', sans-serif !important; 
   /* font-family: 'Lato+Mono', sans-serif !important; */
   /* font-family: 'Lato', sans-serif !important; */
   /*font-size: 100% !important; */
@@ -8,7 +8,7 @@ body {
   /*background: rgba(0,0,0,.1) !important; */
   /*scroll-behavior: smooth;*/
   /*margin-top: 5em;*/
-  background: rgba(225,225,225,1) !important;
+  background: rgba(200,200,200,1) !important;
   /*filter: invert(1) !important; */
   /*overscroll-behavior: none; */
   /*transition: all .15s ease !important;*/
