update nav and subs.coffee

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -39,8 +39,7 @@ template(name='nav')
             
 template(name='dao')
     +reddit 
-    +stack
     
 template(name='groups')
-    +subreddits
-    +site
+    +stack
+    +subs
