round two quick fix for groups and first round merging

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -25,7 +25,7 @@ template(name='nav')
                 i.large.radiation.icon
             //     i.large.clone.icon
             a.icon.zoomer.brown.item.goto_rusers(href='/rusers' class="{{isActivePath regex='rusers'}}" title='reddit users')
-                i.users.icon
+                i.users.large.icon
             // if is_admin
             //     a.icon.zoomer.item.goto_rusers(href='/users' class="{{isActivePath regex='rusers'}}" title='rusers')
             //         i.large.users.icon
