update nav, subs, stack, stump_card has crowd tagging and upvoting

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -41,5 +41,8 @@ template(name='dao')
     +reddit 
     
 template(name='groups')
-    +stack
-    +subs
+    .ui.two.column.stackable.grid
+        .column
+            +stack
+        .column
+            +subs
