--- a/client/stack/stack.jade
+++ b/client/stack/stack.jade
@@ -23,7 +23,7 @@ template(name='stack')
                     +skve k='sort_direction' v=1 i='chevron down'
             // .four.wide.column
             //     .ui.header stack docs
-            .sixteen.wide.column.scrollin
+            .sixteen.wide.column.scrolling
                 // .ui.four.column.stackable.center.aligned.grid
                 .ui.centered.cards
                     each site_docs
