--- a/client/trump.jade
+++ b/client/trump.jade
@@ -182,7 +182,14 @@ template(name='trump_card')
             if in_dev
                 +print_this
             +doc_emotion
-   
+            .ui.big.icon.button.vote_up
+                i.thumbs.up.icon
+            |#{points} points
+            .ui.big.icon.button.vote_down
+                i.thumbs.down.icon
+            .ui.fluid.icon.input
+                i.plus.icon
+                input.tag_tweet(type='text' placeholder='tag')
    
 template(name='trump_tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
