change trump icon to university, fixed tagging field

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -22,7 +22,7 @@ template(name='nav')
                 i.large.clone.icon
             // a.icon.zoomer.item.clear_tags.goto_subreddit(href='/subs' class="{{isActiveRoute regex='sub'}}" title='subreddits')
             a.icon.zoomer.item(href='/trump' class="{{isActivePath regex='trump'}}" title='trump')
-                i.large.radiation.icon
+                i.large.university.icon
             //     i.large.clone.icon
             a.icon.zoomer.brown.item.goto_rusers(href='/rusers' class="{{isActivePath regex='rusers'}}" title='reddit users')
                 i.users.large.icon
