--- a/client/trump.jade
+++ b/client/trump.jade
@@ -3,7 +3,7 @@ template(name='trump')
     //     .ui.basic.center.aligned.segment
     //         i.massive.yin.yang.loading.link.grey.icon.get_info.shadowed2
     .ui.stackable.grid
-        .sixteen.wide.column
+        .twelve.wide.column
             .ui.inline.header trump tweets
             if selected_trump_tags
                 // if many_tags
@@ -36,9 +36,9 @@ template(name='trump')
             //     |1
             // .ui.compact.basic.small.tertiary.button.limit_10
             //     |10
-            .ui.icon.button.skip_left
+            .ui.icon.circular.basic.button.skip_left
                 i.chevron.left.icon
-            .ui.icon.button.skip_right
+            .ui.icon.circular.basic.button.skip_right
                 i.chevron.right.icon
             |#{skip_value}
             .ui.small.input(title='skip number')
@@ -46,6 +46,41 @@ template(name='trump')
             // img.ui.inline.image(src=data.header_img)
             // .ui.inline.header.pull_latest #{data.title}
             // +alpha
+            div
+            .scrolling
+                if trump_docs
+                    .ui.four.stackable.cards 
+                        each trump_docs
+                            +trump_card
+                else
+                    .ui.basic.center.aligned.segment
+                        i.big.loading.yin.yang.icon
+        .four.wide.column
+            .ui.inline.small.header 
+                i.users.icon
+                |people
+            div
+            .ui.inline.small.header 
+                i.marker.icon
+                |locations
+            div
+            .ui.inline.small.header 
+                i.hashtag.icon
+                |hashtags
+            div
+            .ui.inline.small.header 
+                i.users.icon
+                |people
+            // .ui.inline.small.header 
+            //     i.users.icon
+            //     |people
+            each selected_trump_People
+                .ui.button.unselect_trump_People #{this}
+            each trump_People_tags
+                .ui.compact.basic.button.select_domain(class=domain_selector_class)
+                    |#{name} 
+                    small #{count}
+            div
             .ui.inline.small.header 
                 i.clock.icon
                 |time tags
@@ -55,74 +90,51 @@ template(name='trump')
                 .ui.compact.basic.button.select_trump_time_tag(class=subtrump_selector_class)
                     |#{name} 
                     small #{count}
-            div
-            .scrollin
-                if trump_docs
-                    .ui.four.stackable.cards 
-                        each trump_docs
-                            +trump_card
-                else
-                    .ui.basic.center.aligned.segment
-                        i.big.loading.yin.yang.icon
-        // .four.wide.column
-        //     .ui.inline.small.header domains
-        //     each selected_trump_domains
-        //         .ui.button.unselect_trump_domain #{this}
-        //     each trump_domain_tags
-        //         .ui.compact.basic.button.select_domain(class=domain_selector_class)
-        //             |#{name} 
-        //             small #{count}
-        //     div
-        //     i.clock.icon            
-        //     each trump_time_tags
-        //         .ui.compact.basic.button.select_time_tag(class=domain_selector_class)
-        //             |#{name} 
-        //             small #{count}
-        //     if in_dev
-        //         +print_this
-        //         // div
-        //     with emotion_avg
-        //         // .ui.list
-        //         //     .item {{ to_percent avg_sent_score}}% sentiment
-        //         //     .item {{ to_percent avg_joy_score}}% joy
-        //         //     .item {{ to_percent avg_anger_score}}% anger
-        //         //     .item {{ to_percent avg_sadness_score}}% sad
-        //         //     .item {{ to_percent avg_disgust_score}}% disgust
-        //         //     .item {{ to_percent avg_fear_score}}% fear
-        //         // if is_positive
-        //         //     span.say.ui.green.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}% positive
-        //         //         |&nbsp;
-        //         //     div.rounded(style="height:5px;width:{{to_percent doc_sentiment_score}}%;background-color:green" title="{{to_percent doc_sentiment_score}}% #{doc_sentiment_label}")
-        //         // else
-        //         //     span.say.ui.red.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}%  negative
-        //         //         |&nbsp;
-        //         //     div.rounded(style="height:5px;width:{{abs_percent doc_sentiment_score}}%;background-color:red" title="{{abs_percent doc_sentiment_score}}% #{doc_sentiment_label}")
-        //         span.say.ui.green.text(class="{{calculated_size avg_sent_score}}") {{ to_percent avg_sent_score }}% sentiment 
-        //             |&nbsp;
-        //         div.rounded(style="height:5px;width:{{to_percent avg_sent_score}}%;background-color:green" title="{{to_percent avg_sent_score}}% joy")
-        //         span.say.ui.green.text(class="{{calculated_size avg_joy_score}}") {{ to_percent avg_joy_score }}% joy 
-        //             |&nbsp;
-        //         div.rounded(style="height:5px;width:{{to_percent avg_joy_score}}%;background-color:green" title="{{to_percent avg_joy_score}}% joy")
-        //         //- if above_50 'avg_sadness_score'
-        //             //- .spacer
-        //         span.say.ui.blue.text(class="{{calculated_size avg_sadness_score}}") {{ to_percent avg_sadness_score}}% sad 
-        //             |&nbsp;
-        //         div.rounded(style="height:5px;width:{{to_percent avg_sadness_score}}%;background-color:blue" title="{{to_percent avg_sadness_score}}% sad")
-        //         //- if above_50 'avg_fear_score'
-        //             //- .spacer
-        //         span.say.ui.grey.text(class="{{calculated_size avg_fear_score}}") {{ to_percent avg_fear_score }}% fear 
-        //             |&nbsp;
-        //         div.rounded(style="height:5px;width:{{to_percent avg_fear_score}}%;background-color:grey" title="{{to_percent avg_fear_score}}% fear")
-        //         //- if above_50 'avg_disgust_score'
-        //             //- .spacer
-        //         span.say.ui.orange.text(class="{{calculated_size avg_disgust_score}}") {{ to_percent avg_disgust_score }}% disgust 
-        //             |&nbsp;
-        //         div.rounded(style="height:5px;width:{{to_percent avg_disgust_score}}%;background-color:orange" title="{{to_percent avg_disgust_score}}% disgust")
-        //         //- if above_50 'avg_anger_score'
-        //             //- .spacer
-        //         span.say.ui.red.text(class="{{calculated_size avg_anger_score}}") {{ to_percent avg_anger_score }}% anger 
-        //             |&nbsp;
-        //         div.rounded(style="height:5px;width:{{to_percent avg_anger_score}}%;background-color:red" title="{{to_percent avg_anger_score}}% anger")
+            if in_dev
+                +print_this
+                // div
+            with emotion_avg
+                // .ui.list
+                //     .item {{ to_percent avg_sent_score}}% sentiment
+                //     .item {{ to_percent avg_joy_score}}% joy
+                //     .item {{ to_percent avg_anger_score}}% anger
+                //     .item {{ to_percent avg_sadness_score}}% sad
+                //     .item {{ to_percent avg_disgust_score}}% disgust
+                //     .item {{ to_percent avg_fear_score}}% fear
+                // if is_positive
+                //     span.say.ui.green.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}% positive
+                //         |&nbsp;
+                //     div.rounded(style="height:5px;width:{{to_percent doc_sentiment_score}}%;background-color:green" title="{{to_percent doc_sentiment_score}}% #{doc_sentiment_label}")
+                // else
+                //     span.say.ui.red.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}%  negative
+                //         |&nbsp;
+                //     div.rounded(style="height:5px;width:{{abs_percent doc_sentiment_score}}%;background-color:red" title="{{abs_percent doc_sentiment_score}}% #{doc_sentiment_label}")
+                span.say.ui.green.text(class="{{calculated_size avg_sent_score}}") {{ to_percent avg_sent_score }}% sentiment 
+                    |&nbsp;
+                div.rounded(style="height:5px;width:{{to_percent avg_sent_score}}%;background-color:green" title="{{to_percent avg_sent_score}}% joy")
+                span.say.ui.green.text(class="{{calculated_size avg_joy_score}}") {{ to_percent avg_joy_score }}% joy 
+                    |&nbsp;
+                div.rounded(style="height:5px;width:{{to_percent avg_joy_score}}%;background-color:green" title="{{to_percent avg_joy_score}}% joy")
+                //- if above_50 'avg_sadness_score'
+                    //- .spacer
+                span.say.ui.blue.text(class="{{calculated_size avg_sadness_score}}") {{ to_percent avg_sadness_score}}% sad 
+                    |&nbsp;
+                div.rounded(style="height:5px;width:{{to_percent avg_sadness_score}}%;background-color:blue" title="{{to_percent avg_sadness_score}}% sad")
+                //- if above_50 'avg_fear_score'
+                    //- .spacer
+                span.say.ui.grey.text(class="{{calculated_size avg_fear_score}}") {{ to_percent avg_fear_score }}% fear 
+                    |&nbsp;
+                div.rounded(style="height:5px;width:{{to_percent avg_fear_score}}%;background-color:grey" title="{{to_percent avg_fear_score}}% fear")
+                //- if above_50 'avg_disgust_score'
+                    //- .spacer
+                span.say.ui.orange.text(class="{{calculated_size avg_disgust_score}}") {{ to_percent avg_disgust_score }}% disgust 
+                    |&nbsp;
+                div.rounded(style="height:5px;width:{{to_percent avg_disgust_score}}%;background-color:orange" title="{{to_percent avg_disgust_score}}% disgust")
+                //- if above_50 'avg_anger_score'
+                    //- .spacer
+                span.say.ui.red.text(class="{{calculated_size avg_anger_score}}") {{ to_percent avg_anger_score }}% anger 
+                    |&nbsp;
+                div.rounded(style="height:5px;width:{{to_percent avg_anger_score}}%;background-color:red" title="{{to_percent avg_anger_score}}% anger")
             
         //     // .ui.list.mobile.hidden
         //         // .item.seg.say !{data.public_description}
@@ -161,19 +173,20 @@ template(name='trump_card')
             .ui.small.header(class=post_header_class) !{text}
             .ui.basic.label isRetweet: #{isRetweet}
             .ui.basic.label(title='is deleted')
-                i.remove.icon
+                i.remove.red.icon
                 |#{isDeleted}
-            .ui.basic.label device: #{device}
+            .ui.basic.label(title='device') #{device}
             .ui.basic.label
                 |#{favorites}
-                i.heart.icon
+                i.heart.red.icon
             .ui.basic.label
                 |#{retweets}
-                i.refresh.icon
+                i.refresh.teal.icon
             .ui.basic.label date: {{from_now date}} {{trump_date date}}
             
             .ui.basic.label
-                |isFlagged: #{isFlagged}
+                i.flag.icon
+                | #{isFlagged}
             each tags
                 +flat_trump_tag_selector
                 // a.ui.label.select_trump_tag #{this}
@@ -182,10 +195,10 @@ template(name='trump_card')
             if in_dev
                 +print_this
             +doc_emotion
-            .ui.big.icon.button.vote_up
+            .ui.circular.basic.icon.button.vote_up
                 i.thumbs.up.icon
-            |#{points} points
-            .ui.big.icon.button.vote_down
+            |#{points}
+            .ui.circular.basic.icon.button.vote_down
                 i.thumbs.down.icon
             .ui.fluid.icon.input
                 i.plus.icon
