remove nav bar and make trump route home

--- a/client/client.jade
+++ b/client/client.jade
@@ -36,7 +36,7 @@ head
 
 template(name='layout')
     // +status
-    +nav
+    // +nav
     .ui.bottom.attached.pushable.segment
         // +top_sidebar
         // +left_sidebar
