--- a/client/family.jade
+++ b/client/family.jade
@@ -12,6 +12,8 @@ template(name='family')
                 input(type='text' placeholder='add')
             // +tribe_posts 
             each tribe_posts
-                .ui.header #{title}
+                img.ui.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+
+                a.ui.header(href="/p/#{_id}") #{title}
                 
                 
