--- a/client/post.jade
+++ b/client/post.jade
@@ -20,8 +20,14 @@ template(name='post_view')
     with current_doc
         .ui.stackable.padded.grid
             .row 
+                .nine.wide.column
+                    img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+                    // a.ui.header(href="/user/#{target.username}")
+                    //     |#{target.username}
+                    .ui.segment
+                        |!{content}
                 .three.wide.column
-                    a.ui.fluid.large.circular.basic.button(href="/tribe/#{tribe}")
+                    a.ui.fluid.large.circular.basic.button(href="/family")
                         i.chevron.left.icon
                         |#{tribe}
                     .ui.large.inline.header #{title}
@@ -51,12 +57,6 @@ template(name='post_view')
                     +array_view key='time_tags' direct=true
                     +array_view key='people_tags' direct=true
                     //- +array_view key='location_tags' label='location_tags' direct=true
-                .nine.wide.column
-                    img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
-                    // a.ui.header(href="/user/#{target.username}")
-                    //     |#{target.username}
-                    .ui.segment
-                        |!{content}
                 .four.wide.column
                     +voting_full
                     +comments
