--- a/client/post.jade
+++ b/client/post.jade
@@ -20,40 +20,39 @@ template(name='post_view')
     with current_doc
         .ui.stackable.padded.grid
             .row 
-                .nine.wide.column
+                .twelve.wide.column
                     img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                     // a.ui.header(href="/user/#{target.username}")
                     //     |#{target.username}
                     .ui.segment
                         |!{content}
-                .three.wide.column
+                .four.wide.column
                     a.ui.fluid.large.circular.basic.button(href="/family")
                         i.chevron.left.icon
-                        |#{tribe}
+                        |family
                     .ui.large.inline.header #{title}
                     // div
                     // .ui.inline.grey.header {{from_now start_datetime}}
                     
-                    if can_edit
-                        a.edit_post(href="/m/post/#{_id}/edit" title='edit')
-                            i.big.circular.link.pencil.icon
+                    // if can_edit
+                    //     a.edit_post(href="/m/post/#{_id}/edit" title='edit')
+                    //         i.big.circular.link.pencil.icon
                     .ui.small.header created #{when} 
-                    .ui.small.grey.header 
-                        i.line.chart.icon
-                        |stats
-                    +boolean_view key='published' direct=true
+                    // .ui.small.grey.header 
+                    //     i.line.chart.icon
+                    //     |stats
+                    // +boolean_view key='published' direct=true
                     .ui.list
                         .item #{_views} views
-                        |viewed by
-                        +array_edit key='viewed_usernames' label='sign viewer log' direct=true
-                        each viewed_usernames
-                            .ui.label #{this}
-                    +array_view key='tags' label='tags' direct=true
-                    +array_view key='location_tags' direct=true
-                    +array_view key='time_tags' direct=true
-                    +array_view key='people_tags' direct=true
+                        // |viewed by
+                        // +array_edit key='viewed_usernames' label='sign viewer log' direct=true
+                        // each viewed_usernames
+                        //     .ui.label #{this}
+                    +array_edit key='tags' label='tags' direct=true
+                    +array_edit key='location_tags' direct=true
+                    +array_edit key='time_tags' direct=true
+                    +array_edit key='people_tags' direct=true
                     //- +array_view key='location_tags' label='location_tags' direct=true
-                .four.wide.column
                     +voting_full
                     +comments
                     +post_tips
@@ -104,20 +103,21 @@ template(name='user_item')
 template(name='post_tips')
     .ui.dividing.header 
         i.coins.icon
-        |#{tip_count} tips totaling #{tip_total}p
-    |tips cost 11p, give the author 10p
+        // |#{tip_count} tips totaling #{tip_total}p
+        |#{tip_count} tips
+    // |tips cost 11p, give the author 10p
     .ui.green.fluid.button.tip
         i.donate.icon
         |tip
     .ui.link.selection.list
-        .ui.styled.fluid.accordion 
-            each tippers
-                .title
-                    img.ui.avatar.image(src="{{c.url profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-                    // |#{username} #{total_tip_amount}
-                    |#{total_tip_amount}
-                    i.dropdown.icon
-                .content
-                    .ui.list
-                        each tipper_tips
-                            .item #{when} 
+        // .ui.styled.fluid.accordion 
+        each tippers
+            .title
+                img.ui.avatar.image(src="{{c.url profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+                // |#{username} #{total_tip_amount}
+                |#{total_tip_amount}
+                i.dropdown.icon
+            .content
+                .ui.list
+                    each tipper_tips
+                        .item 10 #{when} 
