--- a/client/family.jade
+++ b/client/family.jade
@@ -28,13 +28,13 @@ template(name='family')
                 // .ui.label #{this}
                 +family_tag_selector
                 // .ui.large.label(title=count) #{name}
-            .ui.inline.small.header 
-                i.users.icon
-                |people
             div
             .ui.inline.small.header 
                 i.marker.icon
                 |locations
+            each selected_location_tags
+                .ui.button.unselect_location_tag
+                    |#{this}
             each family_location_tags
                 .ui.compact.basic.button.select_location_tag(class=domain_selector_class)
                     |#{name} 
@@ -42,23 +42,19 @@ template(name='family')
             .ui.inline.small.header 
                 i.marker.icon
                 |time tags
+            each selected_time_tags
+                .ui.button.unselect_time_tag
+                    |#{this}
             each family_time_tags
                 .ui.compact.basic.button.select_time_tag(class=domain_selector_class)
                     |#{name} 
                     small #{count}
-            div
-            .ui.inline.small.header 
-                i.users.icon
-                |people
-            // .ui.inline.small.header 
-            //     i.users.icon
-            //     |people
-            each selected_family_People
-                .ui.button.unselect_family_People #{this}
-            each family_People_tags
-                .ui.compact.basic.button.select_domain(class=domain_selector_class)
-                    |#{name} 
-                    small #{count}
+            // each selected_family_People
+            //     .ui.button.unselect_family_People #{this}
+            // each family_People_tags
+            //     .ui.compact.basic.button.select_domain(class=domain_selector_class)
+            //         |#{name} 
+            //         small #{count}
         .eleven.wide.column
             .ui.inline.header #{post_count}
             if skv_is 'family_sort_direction' 1
