--- a/client/family.jade
+++ b/client/family.jade
@@ -57,29 +57,29 @@ template(name='family')
             //         small #{count}
         .eleven.wide.column
             .ui.inline.header #{post_count}
-            if skv_is 'family_sort_direction' 1
-                .ui.icon.compact.basic.tertiary.button.sort_down
-                    i.caret.down.icon
-            else
-                .ui.icon.compact.basic.tertiary.button.sort_up
-                    i.caret.up.icon
-            .ui.icon.button.sort_retweet(class=retweet_class)
-                i.refresh.icon
-            .ui.icon.button.sort_favorite(class=fav_class)
-                i.favorite.icon
-            .ui.icon.compact.basic.small.button.sort_date(class=date_class)
-                i.clock.icon
-            // .ui.compact.basic.small.tertiary.button.limit_1
-            //     |1
-            // .ui.compact.basic.small.tertiary.button.limit_10
-            //     |10
-            .ui.icon.circular.basic.button.skip_left
-                i.chevron.left.icon
-            .ui.icon.circular.basic.button.skip_right
-                i.chevron.right.icon
-            |#{skip_value}
-            .ui.small.input(title='skip number')
-                input.skip_number(type='number')
+            // if skv_is 'family_sort_direction' 1
+            //     .ui.icon.compact.basic.tertiary.button.sort_down
+            //         i.caret.down.icon
+            // else
+            //     .ui.icon.compact.basic.tertiary.button.sort_up
+            //         i.caret.up.icon
+            // .ui.icon.button.sort_retweet(class=retweet_class)
+            //     i.refresh.icon
+            // .ui.icon.button.sort_favorite(class=fav_class)
+            //     i.favorite.icon
+            // .ui.icon.compact.basic.small.button.sort_date(class=date_class)
+            //     i.clock.icon
+            // // .ui.compact.basic.small.tertiary.button.limit_1
+            // //     |1
+            // // .ui.compact.basic.small.tertiary.button.limit_10
+            // //     |10
+            // .ui.icon.circular.basic.button.skip_left
+            //     i.chevron.left.icon
+            // .ui.icon.circular.basic.button.skip_right
+            //     i.chevron.right.icon
+            // |#{skip_value}
+            // .ui.small.input(title='skip number')
+            //     input.skip_number(type='number')
             // img.ui.inline.image(src=data.header_img)
             // .ui.inline.header.pull_latest #{data.title}
             // +alpha
@@ -118,14 +118,14 @@ template(name='family_card')
             if in_dev
                 +print_this
             // +doc_emotion
-            .ui.circular.basic.icon.button.vote_up
-                i.thumbs.up.icon
-            |#{points}
-            .ui.circular.basic.icon.button.vote_down
-                i.thumbs.down.icon
-            .ui.fluid.icon.input
-                i.plus.icon
-                input.tag_tweet(type='text' placeholder='tag')
+            // .ui.circular.basic.icon.button.vote_up
+            //     i.thumbs.up.icon
+            // |#{points}
+            // .ui.circular.basic.icon.button.vote_down
+            //     i.thumbs.down.icon
+            // .ui.fluid.icon.input
+            //     i.plus.icon
+            //     input.tag_tweet(type='text' placeholder='tag')
    
 template(name='family_tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
