--- a/client/post.jade
+++ b/client/post.jade
@@ -27,7 +27,7 @@ template(name='post_view')
                     .ui.segment
                         |!{content}
                 .four.wide.column
-                    a.ui.fluid.large.circular.basic.button(href="/family")
+                    a.ui.fluid.large.basic.button(href="/family")
                         i.chevron.left.icon
                         |family
                     .ui.large.inline.header #{title}
@@ -36,7 +36,7 @@ template(name='post_view')
                     
                     // if can_edit
                     //     a.edit_post(href="/m/post/#{_id}/edit" title='edit')
-                    //         i.big.circular.link.pencil.icon
+                    //         i.big.link.pencil.icon
                     .ui.small.header created #{when} 
                     // .ui.small.grey.header 
                     //     i.line.chart.icon
@@ -61,14 +61,15 @@ template(name='post_edit')
     with current_doc
         .ui.stackable.padded.grid
             .row
-                .eight.wide.column
-                    a.ui.green.big.circular.button(href="/post/#{_id}/view" title='save')
+                .ten.wide.column
+                    a.ui.green.big.button(href="/post/#{_id}/view" title='save')
                         i.checkmark.big.icon
                         |save
-                    .ui.inline.header 
-                        +icolor name='news' cl='ui image inline pointer'
+                    .ui.inline.header
+                        i.pencil.icon
+                        // +icolor name='news' cl='ui image inline pointer'
                         |edit post
-                    i.large.link.circular.red.remove.icon.delete_post
+                    i.large.link.red.remove.icon.delete_post
                     +print_this
                     // .ui.header 
                     //     small author
@@ -78,7 +79,7 @@ template(name='post_edit')
                     +image_edit key='image_id' label='image' direct=true
                     div 
                     // +text_edit key='tribe' icon='fire' direct=true
-                    +boolean_edit key='published' icon='visible' direct=true
+                    // +boolean_edit key='published' icon='visible' direct=true
                     // if is_admin 
                     //     +text_edit key='model' label='model' direct=true
                     // unless published
@@ -90,8 +91,8 @@ template(name='post_edit')
                     //         |unpublish
                     // .ui.header
                     //     |audience
-                .eight.wide.column
-                    +text_edit key='title' label='title' direct=true
+                .six.wide.column
+                    // +text_edit key='title' label='title' direct=true
                     // +tea_edit key='content' label='content' direct=true
                     +array_edit key='tags' label='tags' i='tags' direct=true
                     +array_edit key='location_tags' label='location tags' i='marker' direct=true
