--- a/client/family.jade
+++ b/client/family.jade
@@ -1,6 +1,6 @@
 template(name='family')
-    .ui.stackable.padded.grid
-        .five.wide.column
+    .ui.stackable.grid
+        .four.wide.column
             // .ui.header my 
             // .ui.header posts
             .ui.icon.button.add_fam_post
@@ -50,14 +50,14 @@ template(name='family')
                 .ui.compact.basic.button.select_time_tag(class=domain_selector_class)
                     |#{name} 
                     // small #{count}
+            // .ui.inline.header #{post_count}
             // each selected_family_People
             //     .ui.button.unselect_family_People #{this}
             // each family_People_tags
             //     .ui.compact.basic.button.select_domain(class=domain_selector_class)
             //         |#{name} 
             //         small #{count}
-        .eleven.wide.column
-            .ui.inline.header #{post_count}
+        .twelve.wide.column
             // if skv_is 'family_sort_direction' 1
             //     .ui.icon.compact.basic.tertiary.button.sort_down
             //         i.caret.down.icon
@@ -95,7 +95,7 @@ template(name='family')
             //             i.big.loading.yin.yang.icon
         
             // .ui.header photos
-            .ui.three.stackable.cards.scrolling
+            .ui.four.stackable.cards.scrolling
                 each tribe_posts
                     +family_card
 
